# finops-agent-lt

./: .dockerignore  .gitignore  Dockerfile  README.md  coding-conventions.md  config.yaml  promqls.ipynb  pyproject.toml  pytest.ini  run_tests.py
.github/workflows/: docker-build.yml  helm-package.yml
deployments/grafana/: forecasting-dashboard.json
deployments/helm-for-kof/: Chart.yaml  README.md  values.yaml
deployments/helm-for-kof/templates/: deployment.yaml  grafana-dashboard-configmap.yaml  grafana-datasources.yaml  grafana-namespace.yaml  service.yaml
deployments/helm-standalone/: Chart.yaml  README.md  values.yaml
deployments/helm-standalone/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  grafana-dashboards.yaml  grafana-datasources.yaml
deployments/k0rdent-service-template/: README.md  beach-head-mcs.yaml  helm-repo.yaml  kustomization.yaml  service-template.yaml
deployments/kubernetes/: deployment.yaml  grafana-dashboard.yaml  vmuser.yaml
docs/: TOTO_TENSOR_SHAPE_GUIDE.md  appendix.md  finops-risk-roi.md  node-normalization.md
helm/: Chart.yaml  README.md  values.yaml
helm/files/dashboards/: forecasting-dashboard.json
helm/templates/: configmap.yaml  deployment.yaml  grafana-dashboard-configmap.yaml  grafana-datasources.yaml  grafana-deployment.yaml  grafana-service.yaml
src/: __init__.py  main.py
src/adapters/: forecast_format_converter.py  prometheus_toto_adapter.py
src/collectors/: prometheus.py
src/core/: metric_types.py  promql_queries.py
src/forecasting_agent/: main.py
src/metrics/: metric_types.py  promql_queries.py
src/optimizers/: __init__.py  base.py  idle_capacity.py
src/utils/: node_normalizer.py
src/validation/: __init__.py  forecast_validator.py  toto_validator.py
tests/: conftest.py  test_node_normalizer.py  test_prometheus_collector.py
tests/e2e/: __init__.py  test_complete_system.py
tests/integration/: __init__.py  test_idle_capacity.py
tests/unit/: __init__.py  test_cluster_cost_forecast.py  test_metrics_server.py  test_prophet_forecasting.py
tests/unit-tests/: __init__.py  test_model_adapter.py
tests/validation/: test_forecast_validator.py  test_toto_validator.py
toto/: Untitled.ipynb
toto/inference/: forecaster.py  gluonts_predictor.py
toto/model/: attention.py  backbone.py  toto.py  transformer.py  util.py
(+19 files in other folders)
