[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "forecasting-agent"
version = "0.1.0"
description = "A forecasting agent for cost optimization"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "prometheus-api-client",
    "pyyaml",
    "torch",  # required for Toto model
    "einops", # Toto dataset utilities
    "jaxtyping", # type annotations used in Toto utilities
    "transformers",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "black",
    "isort",
    "types-PyYAML",
]

[tool.pdm]
distribution = false
