[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "forecasting-agent"
version = "0.1.0"
description = "A forecasting agent for cost optimization"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "prometheus-api-client",
    "pyyaml",
    "torch",  # required for Toto model
    "einops", # Toto dataset utilities
    "jaxtyping", # type annotations used in Toto utilities
    "transformers",
    "gluonts[torch]==0.15.1",  # required by TOTO model
    "rotary-embedding-torch==0.8.6",  # required by TOTO model
    "tqdm==4.66.3",  # required by TOTO model
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "black",
    "isort",
    "types-PyYAML",
]

[tool.pdm]
distribution = false
